# bridge

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.simple  Makefile  README.md  analyze_ogorb_data.py  c1_test_results.json  cli.py  docker-compose.dev-full.yml  docker-compose.dev.yml  docker-compose.mcp-modes.yml  docker-compose.redis.yml  pyproject.toml  start_bridge_mcp.bat  test_analytics_demo.py  test_c1_scenarios.py  test_manual.py
.cursor/rules/: advanced-analytics.mdc  data-quality-management.mdc  development-workflow.mdc  governance-contracts.mdc  greeum-memory-rule.mdc  integrated-data-layer.mdc  mcp-architecture.mdc  memento-memory-rule.mdc  ml-algorithms.mdc  ml-models.mdc  observability-monitoring.mdc  project-structure.mdc  python-coding-style.mdc  security-governance.mdc  tech-stack-dependencies.mdc  testing-quality.mdc  workflow-automation.mdc
assets/prompts/: default-task.txt
data/dashboards/: integration_dashboard.json  test_dashboard.json
docs/: advanced-analytics-guide.md  api-reference.md  architecture.md  bridge-analytics-c1.md  bridge-analytics-ca-3-3-3-4.md  bridge-analytics-ca.md  bridge-analytics-cd.md  bridge-analytics-milestones.md  bridge-analytics-roadmap.md  bridge-development-roadmap.md  bridge-milestones.md  bridge-model-context-protocol.md  bridge-system-architecture.md  developer-guide.md  developer-quick-start.md  elasticsearch-configuration.md  integrated-data-layer-guide.md  mcp-installation-guide.md  mcp-server-implementation.md  mcp-server-unified.md  ml-user-guide.md  performance-tuning.md  python-architecture-tech-stack.md  security-guide.md  user-guide.md
examples/: analyze_data_examples.py
schema/: customer_segmentation.json
scripts/: init-all-databases.py  init-c1-sample-data.py  init-mysql.sql  init-postgres.sql  run_mcp_server.py
src/bridge/: logging_config.py  mcp_server.py  mcp_server_fixed.py  mcp_server_minimal.py  mcp_server_real.py  mcp_server_robust.py  mcp_server_simple.py  mcp_server_unified.py  mcp_server_working.py
src/croniter/: __init__.py
src/plotly/: __init__.py  (+3 more)
tests/: test_audit_logger.py  test_automation.py  test_ca_milestone_3_2.py  test_celery_integration.py  test_cli.py  test_connectors.py  test_dashboard.py  test_elasticsearch_connector.py  test_governance.py  test_integrated_data_layer.py  test_mcp_analytics_tools.py  test_ml_algorithms.py  test_ml_models.py  test_orchestrator.py  test_orchestrator_auth.py  test_rbac.py  test_semantic_models.py
(+83 files in other folders)
