[project]
name = "bridge"
version = "0.1.0"
description = "Bridge MCP Orchestrator"
authors = [{name = "Bridge Contributors"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "asyncpg>=0.29.0",
    "celery[redis]>=5.3.6",
    "langchain>=0.1.0",
    "openai>=1.30.0",
    "sqlalchemy>=2.0.0",
    "pymongo>=4.7.0",
    "elasticsearch>=8.12.0",
    "polars>=0.20.0",
    "pandas>=2.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=24.3.0",
    "isort>=5.13.0",
    "mypy>=1.9.0"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
